--- a/content/authors/authors.yml
+++ b/content/authors/authors.yml
@@ -1,11 +1,11 @@
 ---
 - name: Tobias Busch
   bio: "Hearing researcher by day, creative coder by night. \nLiving in Oslo, organizing
-    social events for introverts & teaching \nscientists to code. Pomelo is a superior
+    social events for introverts & teaching \nscientists to code. Pomelo is a super
     fruit. \nI never tweet <a href=\"https://twitter.com/drtobilotti\">@drtobilotti</a>\n"
   avatar: "./avatars/avatar.jpg"
   social:
-  - url: https://github.com/Teebusch
+  - url: https://github.com/teebusch
   - url: https://instagram.com/tobilotti
   - url: https://linkedin.com/tobias-busch
   featured: true
