update twitter handle

--- a/content/authors/authors.yml
+++ b/content/authors/authors.yml
@@ -2,7 +2,7 @@
 - name: Tobias Busch
   bio: "Hearing researcher by day, creative coder by night. \nLiving in Oslo, organizing
     social events for introverts & teaching \nscientists to code. Pomelo is a super
-    fruit. \nI never tweet <a href=\"https://twitter.com/drtobilotti\">@drtobilotti</a>\n"
+    fruit. \nI never tweet <a href=\"https://twitter.com/tobilottii\">@tobilottii</a>\n"
   avatar: "./avatars/avatar.jpg"
   social:
   - url: https://github.com/teebusch
